Note the JavaFX startup warnings in the guide